# View3D

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile  main.cpp
src/controller/: controller.hpp
src/gui/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/model/: model.cpp  model.hpp
src/patterns/: command.hpp  model_manager.hpp
src/tests/: model_manager_test.cpp  model_test.cpp  transform_test.cpp
